Handle multiple maps

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 			//-------------------------------------------------------------------------------------------
 			var configOptions = {
 				// Enter an application ID created through the Map Series builder 
-				appid: "c938e0e709ae43c6bc6634a081af38a2",
+				appid: "",
 				// Optionally to secure Series's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
 				oAuthAppId: "",
@@ -67,7 +67,7 @@
 		<script type="text/javascript">
 			var app = {
 				version: '1.7.3',
-				pathJSAPI: '//js.arcgis.com/3.17/'
+				pathJSAPI: '//js.arcgis.com/3.20/'
 			};
 		</script>
 	</head>
