add config id's

--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,11 @@
 			//     Application configuration (ignored on ArcGIS Online, Portal and during development)
 			//-------------------------------------------------------------------------------------------
 			var configOptions = {
-				// Enter an application ID created through the Map Series builder 
-				appid: "",
+				// Enter an application ID created through the Map Series builder
+				appid: "e0369cc2a43c4bffb0a4744d31f707a1",
 				// Optionally to secure Series's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
-				oAuthAppId: "",
+				oAuthAppId: "5ELG8LDjB7j7TPUr",
 				// Optionally, to use the appid URL parameter, configure authorizedOwners to reference
 				//    members whose stories can be viewed by this storytelling app.
 				// To authorize stories owned by...
