Revert "Try setting authorizedOwner to org"
This reverts commit b675e356d6684d5ac1baa438b98935d6f2f1b654.

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 				//    any member of one or more organizations: use ["[orgID]"] or ["[orgID1]", "[orgID2]", ...] (Note the use of brackets in this case, e.g., ["[nzS0F0zdNLvs7nc8]"])
 				//        You can get your orgID by going to My Organization and clicking Find...The most viewed items in the organization.
 				//        Your orgID will be shown in the search box.
-				authorizedOwners: ["[j52dt7SuSs90QMhY]"]
+				authorizedOwners: [""]
 			};
 			// Optionally sharing and proxy URLs can be configured in app/config.js. This is only required
 			//  when the webmap is not hosted on ArcGIS Online or a Portal for ArcGIS instance and the application isn't deployed as /home/MapSeries/ or /apps/MapSeries/.
