Try different web app

--- a/src/index.html
+++ b/src/index.html
@@ -38,10 +38,11 @@
 			//-------------------------------------------------------------------------------------------
 			var configOptions = {
 				// Enter an application ID created through the Map Series builder
-				appid: "c950dc54b94142afa80c0a22c4097c67",
+//				appid: "c950dc54b94142afa80c0a22c4097c67",
+                appid: "c938e0e709ae43c6bc6634a081af38a2",
 				// Optionally to secure Series's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
-				oAuthAppId: "5ELG8LDjB7j7TPUr",
+				oAuthAppId: "",
 				// Optionally, to use the appid URL parameter, configure authorizedOwners to reference
 				//    members whose stories can be viewed by this storytelling app.
 				// To authorize stories owned by...
