--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                 appid: "82108b45049d40c3be86f1e70a0c11a7",
 				// Optionally to secure Series's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
-				oAuthAppId: "",
+				oAuthAppId: "5ELG8LDjB7j7TPUr",
 				// Optionally, to use the appid URL parameter, configure authorizedOwners to reference
 				//    members whose stories can be viewed by this storytelling app.
 				// To authorize stories owned by...
