--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 			var configOptions = {
 				// Enter an application ID created through the Map Series builder
 //				appid: "c950dc54b94142afa80c0a22c4097c67",
-                appid: "82108b45049d40c3be86f1e70a0c11a7",
+                // appid: "82108b45049d40c3be86f1e70a0c11a7",
 				// Optionally to secure Series's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
 				// oAuthAppId: "5ELG8LDjB7j7TPUr",
