--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,7 @@
 			//-------------------------------------------------------------------------------------------
 			var configOptions = {
 				// Enter an application ID created through the Map Series builder
-//				appid: "c950dc54b94142afa80c0a22c4097c67",
-                // appid: "82108b45049d40c3be86f1e70a0c11a7",
+				// appid: "c950dc54b94142afa80c0a22c4097c67",
 				// Optionally to secure Series's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
 				// oAuthAppId: "5ELG8LDjB7j7TPUr",
@@ -51,7 +50,7 @@
 				//    any member of one or more organizations: use ["[orgID]"] or ["[orgID1]", "[orgID2]", ...] (Note the use of brackets in this case, e.g., ["[nzS0F0zdNLvs7nc8]"])
 				//        You can get your orgID by going to My Organization and clicking Find...The most viewed items in the organization.
 				//        Your orgID will be shown in the search box.
-				authorizedOwners: [""]
+				authorizedOwners: ["*"]
 			};
 			// Optionally sharing and proxy URLs can be configured in app/config.js. This is only required
 			//  when the webmap is not hosted on ArcGIS Online or a Portal for ArcGIS instance and the application isn't deployed as /home/MapSeries/ or /apps/MapSeries/.
