keep the oauthid for convenience sake

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 				// appid: "c950dc54b94142afa80c0a22c4097c67",
 				// Optionally to secure Series's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
-				// oAuthAppId: "5ELG8LDjB7j7TPUr",
+				oAuthAppId: "5ELG8LDjB7j7TPUr",
 				// Optionally, to use the appid URL parameter, configure authorizedOwners to reference
 				//    members whose stories can be viewed by this storytelling app.
 				// To authorize stories owned by...
