--- a/src/demo.html
+++ b/src/demo.html
@@ -31,14 +31,24 @@
 			Checkout the project repository on GitHub to access source code, latest revision, developer documentation, FAQ and tips
 			https://github.com/Esri/map-series-storytelling-template-js
 		-->
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+        <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet-src.js"></script>
 
+        <!-- Load Esri Leaflet from CDN -->
+        <script src="https://unpkg.com/esri-leaflet@2.0.8"></script>
+
+<!--
+        <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+    </script>
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+-->
 		<script type="text/javascript">
 			//-------------------------------------------------------------------------------------------
 			//     Application configuration (ignored on ArcGIS Online, Portal and during development)
 			//-------------------------------------------------------------------------------------------
 			var configOptions = {
 				// Enter an application ID created through the Map Series builder
-				// appid: "c950dc54b94142afa80c0a22c4097c67",
+				// appid: "xxx",
 				// Optionally to secure Series's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
 				oAuthAppId: "5ELG8LDjB7j7TPUr",
@@ -72,7 +82,8 @@
 		</script>
 	</head>
 	<body class="claro">
-		<style>
+		<div id="leftContainer" style="width:50%; float:left">
+        <style>
 			/* CUSTOM CSS RULES */
 		</style>
 
@@ -266,7 +277,10 @@
 				</tr>
 			</table>
 		</div>
-
+      </div>
+      <div id="rightContainer" style="width:50%; height:100%; overflow:auto !important">
+        <div id="maptiks-map" style="width:100%; height:100%"></div>
+      </div>
 		<script type="text/javascript" src="app/main-config.js"></script>
 	</body>
 </html>
