--- a/src/index.html
+++ b/src/index.html
@@ -3,35 +3,34 @@
 	<head>
 		<title></title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-		
+
 		<meta name="fragment" content="!">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-		
+
 		<link type="image/ico" rel="shortcut icon" href="resources/tpl/viewer/icons/favicon.ico">
 		<link type="image/ico" rel="icon"  href="resources/tpl/viewer/icons/favicon.ico">
-		
-		<!-- 
+
+		<!--
 			To correctly reference your Map Series in search engine:
 			 - create and fill out extensively an ArcGIS Online item that link to your final application
 			 - edit the following four tags as well as the title tag above on line 4
 			 - see https://developerscorner.storymaps.arcgis.com/grow-your-story-maps-audience-with-open-graph-tags-b7639cb65d5c
 		-->
 		<meta name="description" content="This story map was created with the Story Map Series application in ArcGIS Online.">
-		
+
 		<!-- Facebook sharing -->
 		<meta property="og:type" content="article"/>
 		<meta property="og:title" content="Story Map Series"/>
 		<meta property="og:description" content="This story map was created with the Story Map Series application in ArcGIS Online."/>
 		<meta property="og:image" content="http://www.arcgis.com/apps/MapSeries/resources/common/icons/esri-globe.png"/>
-		
-		<!-- 
+
+		<!--
 			This application is released under the Apache License V2.0 by Esri http://www.esri.com/
 			Checkout the project repository on GitHub to access source code, latest revision, developer documentation, FAQ and tips
 			https://github.com/Esri/map-series-storytelling-template-js
 		-->
-		
+
 		<script type="text/javascript">
 			//-------------------------------------------------------------------------------------------
 			//     Application configuration (ignored on ArcGIS Online, Portal and during development)
@@ -52,33 +51,39 @@
 				//        Your orgID will be shown in the search box.
 				authorizedOwners: [""]
 			};
-			// Optionally sharing and proxy URLs can be configured in app/config.js. This is only required  
-			//  when the webmap is not hosted on ArcGIS Online or a Portal for ArcGIS instance and the application isn't deployed as /home/MapSeries/ or /apps/MapSeries/. 
+			// Optionally sharing and proxy URLs can be configured in app/config.js. This is only required
+			//  when the webmap is not hosted on ArcGIS Online or a Portal for ArcGIS instance and the application isn't deployed as /home/MapSeries/ or /apps/MapSeries/.
 			// Optionally Bing Maps key, Geometry and Geocode service's URLs can be configured in app/config.js. This is only required
 			//  if the Organization or Portal for ArcGIS instance default configuration has to be overwritten.
 		</script>
-		
+
 		<!--
-		
+
 			Edit below at your own risk
-		
+
 		-->
-		
+
 		<script type="text/javascript">
 			var app = {
-				version: '1.7.3',
-				pathJSAPI: '//js.arcgis.com/3.20/'
+				version: '1.8.0',
+				pathJSAPI: 'https://js.arcgis.com/3.21/'
 			};
 		</script>
+		<noscript>
+			<div style="position: fixed; top: 0px; left: 0px; z-index: 3000;
+								height: 100%; width: 100%; background-color: #FFFFFF">
+				<p style="margin: 50px">This story map requires JavaScript, but running JavaScript is not currently allowed by your web browser. If you wish to view this story, please enable JavaScript in this browser or try a different browser.</p>
+			</div>
+		</noscript>
 	</head>
 	<body class="claro">
 		<style>
 			/* CUSTOM CSS RULES */
 		</style>
-		
+
 		<!-- Builder top panel is injected here -->
 		<div id="builderPanel" class="hide mainViewAboveMap"></div>
-		
+
 		<!-- Header -->
 		<div id="header" class="mainViewAboveMap">
 			<!-- Mobile header -->
@@ -129,10 +134,10 @@
 				<div class="builder-mask"></div>
 			</div>
 		</div>
-		
+
 		<!-- Tab/bullet navigation bar -->
 		<div id="nav-bar" class="mainViewAboveMap"></div>
-		
+
 		<!-- Content -->
 		<div id="contentPanel" class="mobileView">
 			<table class="containerPanelInner">
@@ -158,8 +163,8 @@
 							<!-- Maps and media are injected here -->
 							<div class="medias"></div>
 							<!-- Loading -->
-							<div id="mainStageLoadingIndicator" class="loadingIndicator">
-								<img src="resources/tpl/viewer/icons/loading-light.gif" />
+							<div id="mainStageLoadingIndicator" class="loadingIndicator" role="alert" aria-live="polite">
+							  <img src="resources/tpl/viewer/icons/loading-light.gif" alt="This content is loading."/>
 							</div>
 							<!-- Mobile info button -->
 							<div id="mobileInfoBtn" class="mobileInfoBtn"></div>
@@ -170,7 +175,7 @@
 							<!-- Autoplay -->
 							<div id="autoplay" class="autoplay"></div>
 						</div>
-						
+
 						<!-- Description and legend floating panel -->
 						<div id="descLegendPanel" class="descLegendPanel" tabindex="0">
 							<div class="descLegendPanelInner">
@@ -188,36 +193,36 @@
 		<!-- Mobile footer -->
 		<div id="footerMobile" class="footerMobile mobileView mainViewBelowMap">
 			<!-- Mobile view footer is injected here -->
-		</div>		
-		
+		</div>
+
 		<!-- Loading -->
 		<style>
 			#loadingOverlay {
-				position: absolute; 
-				top: 0; 
-				left: 0; 
-				z-index: 1100; 
-				width: 100%; 
-				height: 100%; 
-				overflow: hidden; 
-				background-color: #E5E5E5; 
-				-webkit-box-shadow: inset 0px 0px 82px 19px rgba(0,0,0,0.3); 
-				-moz-box-shadow: inset 0px 0px 82px 19px rgba(0,0,0,0.3); 
+				position: absolute;
+				top: 0;
+				left: 0;
+				z-index: 1100;
+				width: 100%;
+				height: 100%;
+				overflow: hidden;
+				background-color: #E5E5E5;
+				-webkit-box-shadow: inset 0px 0px 82px 19px rgba(0,0,0,0.3);
+				-moz-box-shadow: inset 0px 0px 82px 19px rgba(0,0,0,0.3);
 				box-shadow: inset 0px 0px 82px 19px rgba(0,0,0,0.3);
 			}
-			
+
 			@keyframes fadein { from { opacity: 0; } to { opacity: 1; } }
 			@-moz-keyframes fadein { from { opacity: 0; } to { opacity: 1; } }
 			@-webkit-keyframes fadein { from { opacity: 0; } to { opacity: 1; } }
 			@-ms-keyframes fadein { from { opacity: 0; } to { opacity: 1; } }
 			@-o-keyframes fadein { from { opacity: 0; } to { opacity: 1; } }
-			
+
 			@keyframes fadeout { from { opacity: 1; } to { opacity: 0; } }
 			@-moz-keyframes fadeout { from { opacity: 1; } to { opacity: 0; } }
 			@-webkit-keyframes fadeout { from { opacity: 1; } to { opacity: 0; } }
 			@-ms-keyframes fadeout { from { opacity: 1; } to { opacity: 0; } }
 			@-o-keyframes fadeout { from { opacity: 1; } to { opacity: 0; } }
-			
+
 			#loadingOverlay.fadeOut {
 				-webkit-animation: fadeout 1.1s;
 				-moz-animation: fadeout 1.1s;
@@ -228,32 +233,32 @@
 				-moz-animation-fill-mode:forwards;
 				animation-fill-mode:forwards;
 			}
-			
+
 			#loadingIndicator {
 				position: fixed;
 				top: 50%;
 				left: 50%;
 				z-index: 1101;
 			}
-			
+
 			.loadingIndicator {
 				margin-left: -17px;
 				margin-top: -20px;
 			}
 		</style>
-		
+
 		<div id="loadingOverlay"></div>
-		<div id="loadingIndicator" class="loadingIndicator">
-			<img src="resources/tpl/viewer/icons/loading-light.gif" />
+		<div id="loadingIndicator" class="loadingIndicator" role="alert" aria-live="polite">
+			<img src="resources/tpl/viewer/icons/loading-light.gif" alt="This story map is loading."/>
 		</div>
 		<div id="loadingMessage"></div>
-		
+
 		<!-- Share dialog -->
 		<div class="modal fade shareDialog" id="shareDialog" role="dialog" data-backdrop="static" tabindex="-1"></div>
-		
+
 		<!-- Builder views are injected here -->
 		<div id="builder-views"></div>
-		
+
 		<!-- Fatal error box -->
 		<div id="fatalError">
 			<table border="0">
@@ -266,7 +271,7 @@
 				</tr>
 			</table>
 		</div>
-		
+
 		<script type="text/javascript" src="app/main-config.js"></script>
 	</body>
 </html>
