--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 		-->
 		<meta name="description" content="This story map was created with the Story Map Series application in ArcGIS Online.">
 
-		<!-- Facebook sharing -->
+		<!-- Social sharing -->
 		<meta property="og:type" content="article"/>
 		<meta property="og:title" content="Story Map Series"/>
 		<meta property="og:description" content="This story map was created with the Story Map Series application in ArcGIS Online."/>
@@ -65,8 +65,8 @@
 
 		<script type="text/javascript">
 			var app = {
-				version: '1.9.3',
-				pathJSAPI: 'https://js.arcgis.com/3.22/'
+				version: '1.10.1',
+				pathJSAPI: 'https://js.arcgis.com/3.23/'
 			};
 		</script>
 		<noscript>
