--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 				appid: "29a0e036b0714963b1d31531c119b7fb",
 				// Optionally to secure Series's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
-				oAuthAppId: "",
+				//oAuthAppId: "",
 				// Optionally, to use the appid URL parameter, configure authorizedOwners to reference
 				//    members whose stories can be viewed by this storytelling app.
 				// To authorize stories owned by...
@@ -48,7 +48,7 @@
 				//    any member of one or more organizations: use ["[orgID]"] or ["[orgID1]", "[orgID2]", ...] (Note the use of brackets in this case, e.g., ["[nzS0F0zdNLvs7nc8]"])
 				//        You can get your orgID by going to My Organization and clicking Find...The most viewed items in the organization.
 				//        Your orgID will be shown in the search box.
-				authorizedOwners: [""]
+				//authorizedOwners: [""]
 			};
 			// Optionally sharing and proxy URLs can be configured in app/config.js. This is only required
 			//  when the webmap is not hosted on ArcGIS Online or a Portal for ArcGIS instance and the application isn't deployed as /home/MapSeries/ or /apps/MapSeries/.
